--- a/public/Project1.Rmd
+++ b/public/Project1.Rmd
@@ -1,7 +1,7 @@
 ---
 title: 'Project 1: Exploratory Data Analysis'
 author: "SDS348"
-date: ''
+date: '2020-05-20'
 output:
   pdf_document:
     toc: no
@@ -20,7 +20,6 @@ tidy=TRUE, tidy.opts=list(width.cutoff=60), R.options=list(max.print=100))
 3 separate datasets were used to create the final dataset. The first is in the package Ecdat, and is called "breaches". This dataset was created by the US Department of Health and Human Services. There are many variables in this dataset, but for my analysis, only 'State' was used. Another variable was created called 'Cyber' that summed up the total number of security breaches by state. The second dataset used was "USstateAbbreviations" in order to convert the 2 letter stae code from the "breaches" dataset into the full name of the state. The last dataset is in the package Datasets, and is called "USArrests". This dataset measured 4 variables per state. 'Murder' is the number of murder arrests per 100,000 individuals. 'Assault' is the number of assault arrests per 100,000 individuals. 'UrbanPop' is the percentage of the population that is urban. 'Rape' is the number of rape arrests per 100,000 individuals. These specific datasets were used because I want to see if there is any relationship between cyber security attacks and violent crimes by state.
 
 ```{R}
-#install.packages("Ecdat")
 library(Ecdat)
 library(tidyverse)
 ?breaches
@@ -29,7 +28,6 @@ breaches1 <- breaches %>% group_by(State) %>% select ("Number", "State") %>%na.o
 USstateAbbreviations <- USstateAbbreviations %>% select ("Name", "ANSI.letters")
 data1 <- inner_join(breaches1, USstateAbbreviations, by=c("State"= "ANSI.letters" )) %>% rename(Abbreviation=State, State=Name)
 
-#install.packages("datasets")
 library(datasets)
 ?USArrests
 USArrests <- USArrests
